projects/hyprwal/builddir/meson-logs/meson-log.txt
Build started at 2026-02-14T17:35:29.317895
Main binary: /usr/bin/python3.13
Build Options: 
Python system: Linux
The Meson build system
Version: 1.9.1
Source dir: /home/alexin/projects/hyprwal
Build dir: /home/alexin/projects/hyprwal/builddir
Build type: native build
Project name: hyprwal
Project version: 0.1
C++ compiler for the host machine: c++ (gcc 15.2.0 "c++ (GCC) 15.2.0")
C++ linker for the host machine: c++ ld.bfd 2.45
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils) 2.45
Copyright (C) 2025 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
C++ compiler for the build machine: c++ (gcc 15.2.0 "c++ (GCC) 15.2.0")
C++ linker for the build machine: c++ ld.bfd 2.45
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils) 2.45
Copyright (C) 2025 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: x86_64
Host machine cpu: x86_64
Target machine cpu family: x86_64
Target machine cpu: x86_64
Dependency hyprland found: YES 0.52.0 (cached)
Dependency hyprtoolkit found: YES 0.4.1 (cached)
Dependency hyprlang found: YES 0.6.7 (cached)
Dependency hyprutils found: YES 0.10.4 (cached)
Dependency hyprcursor found: YES 0.1.13 (cached)
Dependency hyprgraphics found: YES 0.4.0 (cached)
Dependency hyprwayland-scanner found: YES 0.4.5 (cached)
Dependency pixman-1 found: YES 0.46.4 (cached)
Dependency libdrm found: YES 2.4.126 (cached)
Dependency jsoncpp found: YES 1.9.6 (cached)
Dependency libpng found: YES 1.6.50 (cached)
Dependency libjpeg found: YES 3.0.1 (cached)
Dependency libjxl found: YES 0.11.1 (cached)
Dependency Magick++ found: YES 7.1.2 (cached)
Dependency threads found: YES unknown (cached)
Adding test "basic"
Build targets in project: 1

Found ninja-1.13.1 at /usr/bin/ninja
Running compile:
Working directory:  /home/alexin/projects/hyprwal/builddir/meson-private/tmpz8_5zpaa
Code:

        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
-----------
Command line: `c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmpz8_5zpaa/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive` -> 0
Running compile:
Working directory:  /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5
Code:

        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
-----------
Command line: `c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp -o /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp: In function 'int main()':
/home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar
Code:

        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
-----------
Command line: `c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/testfile.cpp -o /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /tmp/tmp95xohr05
Code:
int i = static_cast<int>(0);
-----------
Command line: `c++ /tmp/tmp95xohr05/testfile.cpp -o /tmp/tmp95xohr05/output.obj -D_FILE_OFFSET_BITS=64 -c -std=c++23` -> 0
Compiler accepts -std=c++23: YES
Using cached compile:
Cached command line:  c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmpz8_5zpaa/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp -o /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp: In function 'int main()':
/home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/testfile.cpp -o /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmpz8_5zpaa/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp -o /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp: In function 'int main()':
/home/alexin/projects/hyprwal/builddir/meson-private/tmph8jz2vm5/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/testfile.cpp -o /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/alexin/projects/hyprwal/builddir/meson-private/tmpjz62rfar/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Running compile:
Working directory:  /home/alexin/projects/hyprwal/builddir/meson-private/tmp5xs8o5p_
Code:

-----------
Command line: `c++ /home/alexin/projects/hyprwal/builddir/meson-private/tmp5xs8o5p_/testfile.cpp -o /home/alexin/projects/hyprwal/builddir/meson-private/tmp5xs8o5p_/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive --print-search-dirs` -> 0
stdout:
install: /usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/
programs: =/usr/libexec/gcc/x86_64-pc-linux-gnu/15.2.0/:/usr/libexec/gcc/x86_64-pc-linux-gnu/15.2.0/:/usr/libexec/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/:/usr/lib/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../../x86_64-pc-linux-gnu/bin/x86_64-pc-linux-gnu/15.2.0/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../../x86_64-pc-linux-gnu/bin/
libraries: =/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../../x86_64-pc-linux-gnu/lib/x86_64-pc-linux-gnu/15.2.0/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../../x86_64-pc-linux-gnu/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../x86_64-pc-linux-gnu/15.2.0/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../../lib/:/lib/x86_64-pc-linux-gnu/15.2.0/:/lib/../lib/:/usr/lib/x86_64-pc-linux-gnu/15.2.0/:/usr/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../../x86_64-pc-linux-gnu/lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.0/../../../:/lib/:/usr/lib/
-----------
